<resources>
    <string name="app_name">sharePDF</string>
    <!-- Activities -->
    <string name="Ajustes">Ajustes</string>
    <string name="Archivos">Archivos</string>
    <string name="Busqueda">Búsqueda</string>
    <string name="Subir">Subir</string>
    <string name="Cuenta">Cuenta</string>
    <string name="Compra">Comprar créditos</string>
    <string name="Cerrar">Cerrar sesión</string>
    <!-- Activity Login -->
    <string name="Correo">Correo electrónico</string>
    <string name="Contra">Contraseña</string>
    <string name="Ver">Ver contraseña</string>
    <string name="Registrar">REGISTRAR</string>
    <string name="Entrar">ENTRAR</string>
    <string name="Olvido">¿Olvidaste tu contrseña?</string>
    <!-- Activity Registro -->
    <string name="Registro">REGISTRO</string>
    <string name="Usuario">Usuario</string>
    <string name="Repetir">Repita contraseña</string>
    <string name="Politicas">He leido y acepto términos y condiciones de uso</string>
    <string name="Ingresar">REGISTAR E INGRESAR</string>
    <!-- Activity Cambio Contraseña -->
    <string name="Pregunta">¿Seguro qué olvidaste contraseña?</string>
    <string name="Envio">Se enviará un mensaje a tu correo para restablecer para tu contraseña</string>
    <string name="Introduce">Introduce tu correo aquí</string>
    <string name="Restablecer">Restablecer contraseña</string>
    <!-- Activity Mi cuenta -->
    <string name="Creditos">Créditos</string>
    <string name="Descargados">Archivos descargados</string>
    <string name="Subidos">Archivos subidos</string>
    <string name="Ruta">Ruta para descargas</string>
    <string name="Verificacion1">Cuenta verificada</string>
    <string name="Verificacion2">Por favor, verifique cuenta y reinicie sesión</string>
    <!-- Activity Subir/Descargar -->
    <string name="ExaminarPDF">Examinar</string>
    <string name="col1NombrePDF">Nombre de archivo</string>
    <string name="col2NombrePDF">Nombre archivo</string>
    <string name="Categoria">Categoría</string>
    <string name="col1Descripcion">Descripción</string>
    <string name="Puntuacion">Puntuación</string>
    <string name="col2Descripcion">Describe archivo</string>
    <string name="Descargar">Descargar</string>
    <string name="Fecha">Fecha de subida </string>
    <!-- Activity Ajustes -->
    <string name="Acerca">Acerca de nosotros</string>
    <string name="idioma">Cambiar idioma</string>
    <string name="Escribir">Escríbenos:</string>
    <string name="Enviar">Enviar</string>
    <!-- Toast -->
    <string name="Toast1">Selecciona archivo</string>
    <string name="Toast2">Pon un nombre</string>
    <string name="Toast3">Pon una descripción</string>
    <string name="Toast4">Archivo subido con éxito</string>
    <string name="Toast5">Archivo descargado con éxito</string>
    <string name="Toast6">Autenticación fallida</string>
    <string name="Toast7">Acepta las términos y condiciones</string>
    <string name="Toast8">Ingresa un usuario</string>
    <string name="Toast9">Contraseña muy corta</string>
    <string name="Toast10">Las contraseñas no coinciden</string>
    <string name="Toast11">Usuario no registrado o otro error</string>
    <string name="Toast12">No tienes suficientes créditos</string>
    <string name="Toast13">Verifica tu correo</string>
    <string name="Toast14">Autenticación fallida</string>
    <string name="Toast15">Acepta los términos y condiciones</string>
    <string name="Toast16">Ingresa un usuario</string>
    <string name="Toast17">Formato de correo no válido</string>
    <string name="Toast18">La contraseña debe ser mínimo 6 carácteres y tener una mayúscula, una minúscula y un número</string>
    <string name="Toast19">Las contraseñas  no coinciden</string>
    <string name="Toast20">Introduce tu correo</string>
    <string name="Toast21">Revisa tu correo para restablecer contraseña</string>
    <string name="Toast22">Fallo al enviar mensaje al correo</string>
    <string name="Toast23">No exite usuario con el correo:</string>
    <string name="Toast24">La contraseña no es válida para:</string>
    <string name="Toast25">A ocurrido un error inesperado</string>
    <string name="Toast26">Contraseña no válida</string>
    <string name="Toast27">Correo no válido</string>
    <string name="Toast28">Debes verificar tu cuenta para descargar</string>
    <string name="Toast29">Imagen borrada con éxito</string>
    <string name="Toast30">Fallo al borrar imagen</string>
    <string name="Toast31">Foto actualizada</string>
    <string name="Toast32">Error al actualizar foto</string>
    <!--ProgressDialog/AlertDialog-->
    <string name="Texto1">Selecciona archivo</string>
    <string name="Texto2">Subiendo archivo</string>
    <string name="Texto3">% subido</string>
    <string name="Texto4">Descargando archivo</string>
    <string name="Texto5">% descargado</string>
    <string name="Texto6">Selecciona idioma</string>
    <!-- Idiomas -->
    <string name="str_en" translatable="false">English</string>
    <string name="str_es" translatable="false">Español</string>
    <string name="str_ca" translatable="false">Català</string>
    <!-- Spinner -->
    <string name="Todos">--Todo--</string>
    <string name="Redes">Redes</string>
    <string name="Electronica">Electrónica</string>
    <string name="Programacion">Programación</string>
    <string name="Matematicas">Matemáticas</string>
    <string name="Fisica">Física</string>
    <string name="Quimica">Química</string>
    <string name="Otros">Otros</string>
    <!--Para subida-->
    <string-array name="Selección_Categoria">
        <item>@string/Redes</item>
        <item>@string/Electronica</item>
        <item>@string/Programacion</item>
        <item>@string/Matematicas</item>
        <item>@string/Fisica</item>
        <item>@string/Quimica</item>
        <item>@string/Otros</item>
    </string-array>
    <!--Para descarga-->
    <string-array name="Spinner_Categoria">
        <item>@string/Todos</item>
        <item>@string/Redes</item>
        <item>@string/Electronica</item>
        <item>@string/Programacion</item>
        <item>@string/Matematicas</item>
        <item>@string/Fisica</item>
        <item>@string/Quimica</item>
        <item>@string/Otros</item>
    </string-array>
    <string-array name="idiomas" >
        <item>@string/str_es</item>
        <item>@string/str_ca</item>
        <item>@string/str_en</item>
    </string-array>

</resources>