<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="principal.Archivos">

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/Principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        app:menu_colorNormal="@color/FondoFAB"
        app:menu_colorPressed="@color/PresionadoMenu"
        app:menu_icon="@drawable/ic_add">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/MiCuenta"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:onClick="ClickMiCuenta"
            android:src="@drawable/ic_count"
            app:fab_colorNormal="@color/FondoFAB"
            app:fab_colorPressed="@color/PresionadoFAB"
            app:fab_label="@string/Cuenta"
            app:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/Subir"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:onClick="ClickSubir"
            android:src="@drawable/ic_up"
            app:fab_colorNormal="@color/FondoFAB"
            app:fab_colorPressed="@color/PresionadoFAB"
            app:fab_label="@string/Subir"
            app:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/Busqueda"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:onClick="ClickBusqueda"
            android:src="@drawable/ic_find"
            app:fab_colorNormal="@color/FondoFAB"
            app:fab_colorPressed="@color/PresionadoFAB"
            app:fab_label="@string/Busqueda"
            app:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/Archivos"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:onClick="ClickAjustes"
            android:src="@drawable/ic_config"
            app:fab_colorNormal="@color/FondoFAB"
            app:fab_colorPressed="@color/PresionadoFAB"
            app:fab_label="@string/Ajustes"
            app:fab_size="normal" />
    </com.github.clans.fab.FloatingActionMenu>

</android.support.constraint.ConstraintLayout>