<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/CampoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="38dp"
        android:text="@string/col1NombrePDF" />

    <TextView
        android:id="@+id/CampoCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CampoNombre"
        android:layout_alignStart="@+id/CampoNombre"
        android:layout_below="@+id/CampoNombre"
        android:layout_marginTop="40dp"
        android:text="@string/Categoria" />

    <TextView
        android:id="@+id/CampoDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/CampoCategoria"
        android:layout_alignStart="@+id/CampoCategoria"
        android:layout_below="@+id/CampoCategoria"
        android:layout_marginTop="40dp"
        android:text="@string/col1Descripcion" />

    <TextView
        android:id="@+id/PonerNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/CampoNombre"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_toEndOf="@+id/CampoNombre"
        android:layout_toRightOf="@+id/CampoNombre"
        android:text="TextView" />

    <TextView
        android:id="@+id/PonerCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/PonerNombre"
        android:layout_alignStart="@+id/PonerNombre"
        android:layout_alignTop="@+id/CampoCategoria"
        android:text="TextView" />

    <TextView
        android:id="@+id/PonerDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:maxLines="10"
        android:layout_alignLeft="@+id/PonerCategoria"
        android:layout_alignStart="@+id/PonerCategoria"
        android:layout_alignTop="@+id/CampoDescripcion"
        android:text="TextView" />

    <Button
        android:id="@+id/Descargar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/FondoFAB"
        android:layout_alignLeft="@+id/CampoDescripcion"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/CampoDescripcion"
        android:layout_marginBottom="104dp"
        android:text="@string/Descargar"/>
</RelativeLayout>