<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="principal.Ajustes">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/cambiar_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="150dp"
            android:backgroundTint="@color/FondoFAB"
            android:text="@string/contra" />

        <Button
            android:id="@+id/cambiar_idioma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="250dp"
            android:backgroundTint="@color/FondoFAB"
            android:text="@string/idioma" />
    </RelativeLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/Principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        app:menu_colorNormal="@color/FondoFAB"
        app:menu_colorPressed="@color/PresionadoMenu"
        app:menu_icon="@drawable/ic_add">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/MiCuenta"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:onClick="ClickMiCuenta"
            android:src="@drawable/ic_count"
            app:fab_colorNormal="@color/FondoFAB"
            app:fab_colorPressed="@color/PresionadoFAB"
            app:fab_label="@string/Cuenta"
            app:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/Subir"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:onClick="ClickSubir"
            android:src="@drawable/ic_up"
            app:fab_colorNormal="@color/FondoFAB"
            app:fab_colorPressed="@color/PresionadoFAB"
            app:fab_label="@string/Subir"
            app:fab_size="normal" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/Busqueda"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:onClick="ClickBusqueda"
            android:src="@drawable/ic_find"
            app:fab_colorNormal="@color/FondoFAB"
            app:fab_colorPressed="@color/PresionadoFAB"
            app:fab_label="@string/Busqueda"
            app:fab_size="normal" />


    </com.github.clans.fab.FloatingActionMenu>

</android.support.constraint.ConstraintLayout>